# deckard

./: .gitignore  README.md  bot.py  pyproject.toml
src/: test.py
systemd/: deckard.service
